force-app/main/default/objects/CM_Requirement__c/CM_Requirement__c.object-meta.xml
<CustomObject>
    <description>This Change Managment object contains each requirement for any backlog item.</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>