force-app/main/default/objects/CM_Requirement__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <description>Positive and Negative scenarios</description>
    <inlineHelpText>Expected Outcome.
Include Positive and Negative scenarios.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>