force-app/main/default/objects/CM_Requirement__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Item</label>
    <referenceTo>CM_Backlog_Item__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>