force-app/main/default/objects/CM_Requirement__c/fields/Backlog_Item_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item_Assignee__c</fullName>
    <description>Email address of Assigned Developer</description>
    <formula>IF( NOT(ISNULL( Backlog_Item__r.Assigned_To__c)), Backlog_Item__r.Assigned_To__r.Email, null)</formula>
    <label>Backlog Item Assignee</label>
    <type>Text</type>
</CustomField>