force-app/main/default/objects/CM_Requirement__c/fields/Backlog_Summary_Name__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Summary_Name__c</fullName>
    <formula>IF( NOT(ISNULL( Backlog_Item__c)), Backlog_Item__r.Name,  null)</formula>
    <label>Backlog Summary Name</label>
    <type>Text</type>
</CustomField>