force-app/main/default/objects/CM_Requirement__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship groups all the requirements for each feature.</description>
    <label>Feature</label>
    <referenceTo>CM_Feature__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>