force-app/main/default/objects/CM_Requirement__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Phase__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>