force-app/main/default/objects/CM_Requirement__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Short description of Requirement</description>
    <inlineHelpText>Short description of Requirement</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>