force-app/main/default/objects/CM_Requirement__c/listViews/Membership_Sprint_1_Requirements_Jay.listView-meta.xml
<ListView>
    <fullName>Membership_Sprint_1_Requirements_Jay</fullName>
    <columns>NAME</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Acceptance_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Membership Subscription Platform</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Membership - Sprint 1</value>
    </filters>
    <filters>
        <field>Backlog_Item_Assignee__c</field>
        <operation>contains</operation>
        <value>henry</value>
    </filters>
    <label>Membership Sprint 1 Requirements Jay</label>
</ListView>