force-app/main/default/objects/CM_Requirement__c/listViews/Membership_Sprint_2_Requirements.listView-meta.xml
<ListView>
    <fullName>Membership_Sprint_2_Requirements</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Summary__c</columns>
    <columns>Description__c</columns>
    <columns>Acceptance_Criteria__c</columns>
    <columns>Backlog_Item_Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Membership - Sprint 2</value>
    </filters>
    <label>Membership Sprint 2 Requirements</label>
</ListView>