force-app/main/default/objects/CM_Requirement__c/listViews/Membership_Sprint_9_Requiremens.listView-meta.xml
<ListView>
    <fullName>Membership_Sprint_9_Requiremens</fullName>
    <columns>Backlog_Item_Assignee__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Summary__c</columns>
    <columns>Description__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Membership - Sprint 9</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Membership Sprint 9 Requiremens</label>
</ListView>